[tool.poetry]
name = "journey-planner"
version = "0.1.0"
description = ""
authors = ["Yasmin Haque <yasminhaque97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
