[tool.poetry]
name = "journey-planner"
version = "0.1.0"
description = ""
authors = ["Yasmin Haque <yasminhaque97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask_sqlalchemy = "^2.4.4"
flask-migrate = "^2.5.3"
psycopg2-binary = "^2.8.6"
flask-bcrypt = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
click = "^7.1.2"
coverage = "^5.3"
pytest-cov = "^2.10.1"
pytest-flask = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
